add Admin and User roles, add price discounts